# easyscrape-zazzlesuggest

./: README.md  setup.cfg
easyscrape-etsysuggest/: querysuggestions.py
