[metadata]
name = easyscrape_zazzlesuggest
version = 0.1.0
author = Joseph Ucuzoglu
author_email = baldmancodes@gmail.com
description = Easy web scraping for Zazzle search bar suggested terms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amazingjoe/easyscrape-zazzlesuggest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True